css/style.css
@charset "UTF-8";
body{
    font-family: Arial, Helvetica Neue;
    padding: 0px;
    margin: 0px;
    background: #f9f9f9;
}
body, html, #container {
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100%;
    overflow-y: hidden;
}

/*Generic classes*/
.hidden { display: none; }
.left { float: left; }
.right { float: right; }
.clear { clear: both; }

@font-face {
    font-family: 'iconSweetsRegular';
    src: url('../fonts/iconsweets-webfont.eot');
    src: url('../fonts/iconsweets-webfont.eot?#iefix') format('embedded-opentype'),
    url('../fonts/iconsweets-webfont.woff') format('woff'),
    url('../fonts/iconsweets-webfont.ttf') format('truetype'),
    url('../fonts/iconsweets-webfont.svg#iconSweetsRegular') format('svg');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'fs_font';
    src: url('../fonts/fs_font-webfont.eot');
    src: url('../fonts/fs_font-webfont.eot?#iefix') format('embedded-opentype'),
    url('../fonts/fs_font-webfont.woff') format('woff'),
    url('../fonts/fs_font-webfont.ttf') format('truetype'),
    url('../fonts/fs_font-webfont.svg#new_fontregular') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'filesail_logoblack';
    src: url('../fonts/filesaillogo-black-webfont.eot');
    src: url('../fonts/filesaillogo-black-webfont.eot?#iefix') format('embedded-opentype'),
    url('../fonts/filesaillogo-black-webfont.woff') format('woff'),
    url('../fonts/filesaillogo-black-webfont.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}
.oswald-font {
    font-family: 'Oswald', sans-serif;
}
.ssp-font {
    font-family: 'Source Sans Pro', sans-serif;
}
.ssp-font.italic {
    font-weight: 700;
    font-style: italic;
}
.ssp-font.bold {
    font-weight: 900;
    font-style: oblique;
}
.icon-sweets {
    font-family: iconSweetsRegular;
}
.fs-font {
    font-family: fs_font;
}
.fs-logo {
    font-family: filesail_logoblack;
}
.fs-font.upload-icon {
    cursor: pointer;
    font-size: 130pt;
    color: #e8e8e8;
}
.fs-font.upload-icon:hover {
    color: #cecece;
}
.preload {
    font-family: iconSweetsRegular;
    opacity: 0;
    height: 0px;
    width: 0px;
}

#container {
}
#container header {
    background: #2c2c2c;
    color: white;
    height: 50px;
    line-height: 50px;
    padding: 0px 25px;
}

#container header .logo-contain #logo {
    font-size: 20pt;
    color: #ffffff;
    text-decoration: none;
    display: block;
    letter-spacing: .06em;
    width: 110px;
    font-weight: normal;
    position: relative;
    top: 2px;
}
#container header .close {
    text-decoration: none;
    color: rgba(239, 239, 240, 1.0);
}

#container header button {
    border: 0;
    border-radius: 3px;
    color: white;
    display: inline-block;
    font-size: 8pt;
    cursor: pointer;
    height: 22px;
}
#container header .buttons button {
}

#container header button.login {
    background: transparent;
}
#container header button.login:hover {
}
#container header button.signup {
    width: 56px;
    background: #4c4c4c;
}
#container header button.signup:hover {
    background: #6d6d6d;
}
#container header .login-box {
    margin-top: 15px;
}
#container header .signup-box {
    margin-top: 14px;
}
#container header .login-box .process-login {
    position: relative;
    top: 4px;
}
#container header input[type=text],#container header input[type=password] {
    background: rgba(225, 225, 225, .3);
    border: 1px solid rgba(60, 60, 60, .9);
    border-radius: 3px;
    color: rgba(227, 227, 227, .8);
    display: inline-block;
    font-size: 8pt;
    padding-left: 10px;
    height: 18px;
    position: relative;
    top: 1px;
    width: 100px;
}
#container header input:focus {
    outline: none;
}
#container header .welcome {
    font-size: 8pt;
    color: #bcb5b5;
}
#container header .welcome a {
    color: #6dcefb;
    text-decoration: none;
}
#container header .welcome a.fs-font {
    font-size: 12pt;
    position: relative;
    top: 1px;
    color: #e6e6e6;
}
#container .main-component-contain {
}
#container .body-contain {
    background: #f9f9f9 url(../img/bg-pattern.jpg) no-repeat;
    float: left;
    width: 100%;
    border-right: 1px solid #e6e6e6;
}
#container .body-contain.isLoggedIn {
    width: 63.85%;
    background-image: none;
}
#container .body-contain .main-component-contain {
    min-height: 1680px;
}
#container .body-contain .main-component-contain .body {
    text-align: center;
}
#container .body-contain .main-component-contain .body .upload-contain {
    border-radius: 15px;
    display: inline-block;
    padding: 10px;
    margin-bottom: 5px;
}
#container .body {
    text-align: center;
}
#container .body .upload-contain .upload-border {
    border: 10px #fff solid;
    border-radius: 8px;
}
#container .body .upload-contain .upload-border .upload {
    background: #1483b6;
    border-bottom: 3px #1c6ca4 solid;
    border-radius: 8px;
    color: #fff;
    display: block;
    font-weight: bold;
    height: 80px;
    margin: 0 auto;
    line-height: 86px;
    text-align: center;
    text-decoration: none;
    width: 381px;
}
#container .body .upload-contain .upload:hover {
    background: #1492cc;
}
#container .body .upload-contain .upload:active {
    background: #0f74a3;
    border-top: 3px #124569 solid;
    border-bottom: none;
}
#container .body .upload-contain .status em {
    display: block;
}
#container .body .upload-contain .status ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
#container .body .upload-contain .status ul li {
    display: block;
    text-align: center;
    margin-top: 5px;
}
#container .body .upload-contain .status ul li a {
    color: #587f86;
    font-weight: bold;
    text-decoration: none;
}
#container .body .upload-contain .status ul li a:hover {
    color: #70989e;
}
/* ... */

